--- a/SHAMAN_JUNIOR-LAB2/pom.xml
+++ b/SHAMAN_JUNIOR-LAB2/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.ssau.tk.SHAMAN_JUNIOR.LAB2</groupId>
-    <artifactId>SHAMAN_JUNIOR-LAB2</artifactId>
+    <artifactId>SHAMAN_JUNIOR</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.4.2</version>
+            <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
