--- a/SHAMAN_JUNIOR-LAB2/pom.xml
+++ b/SHAMAN_JUNIOR-LAB2/pom.xml
@@ -21,7 +21,12 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
