--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-db=true
+spring.jpa.show-web=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.hibernate.format_sql=true
