--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.show-web=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.hibernate.format_sql=true
+spring.thymeleaf.cache=false
