--- a/SHAMAN_JUNIOR-LAB2/pom.xml
+++ b/SHAMAN_JUNIOR-LAB2/pom.xml
@@ -95,8 +95,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
 
+    </dependencies>
     <build>
         <plugins>
             <plugin>
