--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.web.resources.static-locations=classpath:/public/,classpath:/static/
 logging.level.org.springframework.web.servlet.resource=DEBUG
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
