--- a/SHAMAN_JUNIOR-LAB2/pom.xml
+++ b/SHAMAN_JUNIOR-LAB2/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <build>
