--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/application.properties
@@ -13,3 +13,6 @@ logging.level.org.springframework.web.servlet.resource=DEBUG
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+# application-test.properties
+spring.security.enabled=false
